# statistical-simulation

./: .gitignore  CMakeLists.txt  README.adoc  README.md
gem5/: README.adoc  README.md
gem5/configs/testers/: explore_caches.py  explore_memory.py  statsim.py  traffic_gen.py
gem5/src/cpu/testers/packet_trace/: PacketTraceGen.py  SConscript  packet_trace_gen.cc  packet_trace_gen.hh
hrd/: CMakeLists.txt  README.adoc  README.md
hrd/model/: CMakeLists.txt
hrd/model-generator/: CMakeLists.txt  README.adoc  README.md
hrd/model-generator/src/: main.cpp  modelgen.cpp  modelgen.hpp
hrd/model/include/hrd/: metadata.hpp  profile.hpp  request-type.hpp  synthesis.hpp
hrd/model/proto/: hrd.proto
hrd/model/src/: metadata.cpp  profile.cpp  synthesis.cpp
hrd/trace-generator/: CMakeLists.txt
hrd/trace-generator/src/: main.cpp  tracegen.cpp  tracegen.hpp
iogem5/: CMakeLists.txt
iogem5/include/iogem5/: packet-trace.hpp
iogem5/src/: packet-trace.cpp
ioproto/: CMakeLists.txt  README.adoc  README.md
ioproto/include/ioproto/: istream.hpp  ofstream.hpp
ioproto/src/: istream.cpp  ofstream.cpp
mocktails/: CMakeLists.txt
mocktails/model/: CMakeLists.txt
mocktails/model-dumper/: CMakeLists.txt
mocktails/model-dumper/scripts/: dump-mocktails-models.py
mocktails/model-dumper/src/: main.cpp
mocktails/model-generator/: CMakeLists.txt
mocktails/model-generator/inputs/: 1L-dynamic.json  1L-fixed-1024.json  1L-fixed-4096.json  2L-TD.json  SynFullSpatial.json
mocktails/model-generator/scripts/: generate-mocktails.py
mocktails/model-generator/src/: config.cpp  config.hpp  main.cpp  modelgen.cpp  modelgen.hpp
mocktails/model/include/mocktails/: address.hpp  hierarchy.hpp  metadata.hpp  model.hpp  partition.hpp  profile.hpp  request.hpp  sequence.hpp  synthesis.hpp
mocktails/model/proto/: mocktails.proto
mocktails/model/src/: address.cpp  hierarchy.cpp  metadata.cpp  model.cpp  partition.cpp  profile.cpp  request.cpp  synthesis.cpp
mocktails/trace-generator/: CMakeLists.txt
mocktails/trace-generator/src/: main.cpp  tracegen.cpp  tracegen.hpp
reuse-distance/: CMakeLists.txt  README.adoc  README.md
reuse-distance/include/reuse-distance/: olken-tree.hpp  olken.hpp
reuse-distance/src/: olken-tree.cpp  olken.cpp
stm/: CMakeLists.txt  README.adoc  README.md
stm/model/: CMakeLists.txt
stm/model-generator/: CMakeLists.txt
stm/model-generator/src/: main.cpp  modelgen.cpp  modelgen.hpp
stm/model/include/stm/: metadata.hpp  profile.hpp  stack-distance.hpp  stride-pattern.hpp  synthesis.hpp
stm/model/proto/: stm.proto
stm/model/src/: hash.hpp  metadata.cpp  profile.cpp  stack-distance.cpp  stride-pattern.cpp  synthesis.cpp
stm/trace-generator/: CMakeLists.txt
stm/trace-generator/src/: main.cpp  tracegen.cpp  tracegen.hpp
trace-recorder/: .gitignore  README.adoc  README.md  makefile.rules  memory-trace-st.cpp
util/: CMakeLists.txt
util/csv-to-gem5/: CMakeLists.txt
util/csv-to-gem5/src/: main.cpp
util/truncate-gem5-trace/: CMakeLists.txt
util/truncate-gem5-trace/src/: main.cpp
